--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.002   2017-01-16 (PERLANCAR)
+
+	- No functional changes.
+
+	- [doc] Forgot to add Synopsis.
+
+
 0.001   2017-01-16 (PERLANCAR)
 
         - First release.
