--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.003   2017-01-16 (PERLANCAR)
+
+	- [Bugfix] Derp, confused arguments for tempfile().
+
+
 0.002   2017-01-16 (PERLANCAR)
 
 	- No functional changes.
