--- a/Changes
+++ b/Changes
@@ -5,11 +5,15 @@
 
 0.002   2017-01-16 (PERLANCAR)
 
-	- No functional changes.
+	- UPDATE: broken release, don't use.
+
+        - No functional changes.
 
 	- [doc] Forgot to add Synopsis.
 
 
 0.001   2017-01-16 (PERLANCAR)
+
+	- UPDATE: broken release, don't use.
 
         - First release.
