--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.004   2019-01-14 (PERLANCAR)
+
+	- Add functions: write_{text,binary}_to_tempfile.
+
+
 0.003   2017-01-16 (PERLANCAR)
 
 	- [Bugfix] Derp, confused arguments for tempfile().
