--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.008   2021-08-02  Released-By: PERLANCAR; Urgency: medium
+
+	- [ux] Add modify_text() and modify_binary().
+
+
 0.007   2021-08-02  Released-By: PERLANCAR; Urgency: medium
 
 	- By default set permissions to target file if it exists.
